--- a/glossary.tex
+++ b/glossary.tex
@@ -19,6 +19,7 @@
 \newabbreviation{ai}{AI}{artificial intelligence}
 \newabbreviation{ml}{ML}{machine learning}
 \newabbreviation{vc}{VC}{Vapnik-Chervonenkis}
+\newabbreviation{srm}{SRM}{structural risk minimization}
 
 \newglossaryentry{ontology}{%
   name=ontology,
