--- a/main.tex
+++ b/main.tex
@@ -28,6 +28,7 @@
 \usepackage[automake]{glossaries-extra}
 \usepackage{orcidlink}
 \usepackage{fontawesome5}
+\usepackage{nicefrac}
 
 \DeclareMathOperator*{\argmax}{arg\,max}
 \DeclareMathOperator*{\argmin}{arg\,min}
