--- a/handling.tex
+++ b/handling.tex
@@ -2,8 +2,7 @@
 \label{chap:handling}
 
 \chapterprecishere{%
-  {\fontspec[Scale=2]{Symbola}\color{black!80}\symbol{"1F5E1}}
-  It's dangerous to go alone! Take this.
+  $\dagger$ It's dangerous to go alone! Take this.
   \par\raggedleft--- \textup{Unnamed Old Man}, The Legend of Zelda}
 
 % Important: avoid the term "data manipulation" as it has a negative connotation
