Resetting glossary for each chapter.

--- a/data.tex
+++ b/data.tex
@@ -1,5 +1,6 @@
 \chapter{Fundamental concepts}
 \label{chap:fundamental}
+\glsresetall
 
 \chapterprecishere{The simple believes everything,
   \par\raggedleft but the prudent gives thought to his steps.
