--- a/ethics.tex
+++ b/ethics.tex
@@ -1,5 +1,6 @@
 \chapter{Ethics, privacy and regulation}
 \label{chap:ethics}
+\glsresetall
 
 \chapterprecishere{It's a trap!
   \par\raggedleft--- \textup{Admiral Ackbar}, Star Wars Episode VI: Return of the Jedi}
