--- a/evaluation.tex
+++ b/evaluation.tex
@@ -1,5 +1,6 @@
 \chapter{Model evaluation}
 \label{chap:evaluation}
+\glsresetall
 
 \chapterprecishere{But if we judged ourselves truly, we would not be judged.
   \par\raggedleft--- \textup{1 Corinthians 11:31} (ESV)}
