--- a/handling.tex
+++ b/handling.tex
@@ -1,5 +1,6 @@
 \chapter{Data handling}
 \label{chap:handling}
+\glsresetall
 
 \chapterprecishere{%
   $\dagger$ It's dangerous to go alone! Take this.
