--- a/history.tex
+++ b/history.tex
@@ -1,5 +1,6 @@
 \chapter{A brief history of data science}
 \label{chap:history}
+\glsresetall
 
 \chapterprecishere{``Begin at the beginning,'' the King said gravely, ``and
 go on till you come to the end: then stop.''\par\raggedleft--- \textup{Lewis
