--- a/inductive.tex
+++ b/inductive.tex
@@ -1,6 +1,6 @@
 \chapter{Learning from data}
 \label{chap:slt}
-\glsresetall %TODO: do the same thing in all chapters
+\glsresetall
 
 \chapterprecishere{%
   To  understand  God's  thoughts  we  must study statistics, for these are the measure of His purpose.
