--- a/planning.tex
+++ b/planning.tex
@@ -1,5 +1,6 @@
 \chapter{Validation and experimental planning}
 \label{chap:planning}
+\glsresetall
 % TODO: change the chapter title to "Validation" or something similar
 
 \chapterprecishere{%
