--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -1,5 +1,6 @@
 \chapter{Mathematical foundations}
 \label{chap:preliminaries}
+\glsresetall
 
 \chapterprecishere{%
   Maar ik maak steeds wat ik nog niet kan om het te leeren kunnen.\par\raggedleft---
