--- a/preprocess.tex
+++ b/preprocess.tex
@@ -1,5 +1,6 @@
 \chapter{Data preprocessing}
 \label{chap:preprocess}
+\glsresetall
 
 \chapterprecishere{I find your lack of faith disturbing.
   \par\raggedleft--- \textup{Darth Vader}, Star Wars: Episode IV -- A New Hope (1977)}
