--- a/project.tex
+++ b/project.tex
@@ -1,5 +1,6 @@
 \chapter{Data science project}
 \label{chap:project}
+\glsresetall
 
 % TODO: talk about documentation and deployment in the future
 
