--- a/structured.tex
+++ b/structured.tex
@@ -1,5 +1,6 @@
 \chapter{Structured data}
 \label{chap:data}
+\glsresetall
 
 \chapterprecishere{%
   Like families, tidy datasets are all alike, but every messy dataset is messy in its own way.
