--- a/main.tex
+++ b/main.tex
@@ -29,6 +29,7 @@
 \usepackage{orcidlink}
 \usepackage{fontawesome5}
 \usepackage{nicefrac}
+\usepackage{cancel}
 
 \DeclareMathOperator*{\argmax}{arg\,max}
 \DeclareMathOperator*{\argmin}{arg\,min}
