Moving stuff out of chapter 6.

--- a/glossary.tex
+++ b/glossary.tex
@@ -20,6 +20,7 @@
 \newabbreviation{ml}{ML}{machine learning}
 \newabbreviation{vc}{VC}{Vapnik-Chervonenkis}
 \newabbreviation{srm}{SRM}{structural risk minimization}
+\newabbreviation{mlp}{MLP}{multilayer perceptron}
 
 \newglossaryentry{ontology}{%
   name=ontology,
