--- a/inductive.tex
+++ b/inductive.tex
@@ -914,6 +914,12 @@ Other approaches that indirectly control the complexity of the model --- such as
 early stopping, dropout, and batch normalization --- are often called implicit
 regularization.
 
+\section{Linear problems}
+
+\subsection{Neural networks}
+
+\subsection{Support vector machines}
+
 \clearpage
 \section{Intuitions about learning bias}
 
@@ -1073,184 +1079,5 @@ and the perceptron model fails to classify the dataset correctly, see \cref{tab:
 \begin{hlbox}{Think about\dots}
   What happens if we remove $w_0$ from the model?
 \end{hlbox}
-
-\subsection{Multi-layer perceptron learning bias}
-
-The multi-layer perceptron (MLP) is a non-linear classifier that generates a set of hyperplanes
-that separates the classes.  In order to simplify the understanding, consider the
-that the activation function of the hidden layer is the discrete step function
-\begin{equation*}
-  \sigma(x) = \begin{cases}
-    1 & \text{if } x > 0 \\
-    0 & \text{otherwise.}
-  \end{cases}
-\end{equation*}
-A model with two neurons in the hidden layer (effectively the combination of three
-perceptrons) is
-\begin{multline*}
-  f(x_1, x_2; \theta = \left\{ \vec{w}^{(1)}, \vec{w}^{(2)}, \vec{w}^{(3)} \right\}) = \\
-  \sigma\left(
-    \vec{w}^{(3)} \cdot \left[1, \sigma(\vec{w}^{(1)} \cdot \vec{x}), \sigma(\vec{w}^{(2)} \cdot \vec{x})\right]
-  \right)\text{.}
-\end{multline*}
-
-The parameters $\vec{w}^{(1)}$ and $\vec{w}^{(2)}$ represent the hyperplanes that separate
-the classes in the hidden layer, and $\vec{w}^{(3)}$ represents how the hyperplanes are
-combined to generate the output.  If we set $\vec{w}^{(1)} = [-0.5, 1, -1]$ (like the
-perceptron in the previous example) and $\vec{w}^{(2)} = [-0.5, -1, 1]$, we use the third neuron
-to combine the results of the first two neurons.  This way, solution for the XOR problem is
-setting $\vec{w}^{(3)} = [0, 1, 1]$.
-
-\begin{figurebox}[label=fig:mlp]{MLP learning bias.}
-  \centering
-  \begin{tikzpicture}
-    \begin{axis}[
-        axis x line=bottom,
-        axis y line=left,
-        xlabel={$x_1$},
-        ylabel={$x_2$},
-        width=0.6\textwidth,
-        height=0.6\textwidth,
-        xtick={0, 1},
-        ytick={0, 1},
-        grid=both,
-        xmin=-0.5, xmax=1.5,
-        ymin=-0.5, ymax=1.5,
-      ]
-      \addplot+[only marks, mark=+, mark size=3pt] coordinates {
-        (0, 1) (1, 0)
-      };
-      \addplot+[only marks, mark=*, mark size=3pt] coordinates {
-        (0, 0) (1, 1)
-      };
-      \addplot+[domain=0:1.5, mark=none, black] {-0.5 + x};
-      \addplot+[domain=-0.5:1.5, mark=none, black] {0.5 + x};
-    \end{axis}
-  \end{tikzpicture}
-  \tcblower
-  \dots
-\end{figurebox}
-
-\begin{tablebox}[label=tab:xor-mlp]{Truth table for the predictions of the MLP.}
-  \centering
-  \rowcolors{2}{black!10!white}{}
-  \begin{tabular}{ccc|cccc}
-    \toprule
-    $x_1$ & $x_2$ & $y$ & \nth{1} neuron & \nth{2} neuron & $\hat{y}$ \\
-    \midrule
-    0 & 0 & 0 & 0 & 0 & 0 \\
-    0 & 1 & 1 & 0 & 1 & 1 \\
-    1 & 0 & 1 & 1 & 0 & 1 \\
-    1 & 1 & 0 & 0 & 0 & 0 \\
-    \bottomrule
-  \end{tabular}
-  \tcblower
-  \dots
-\end{tablebox}
-
-\begin{hlbox}{Think about\dots}
-  Note that there are many possible solutions for the XOR problem using the MLP.
-\end{hlbox}
-
-\subsection{Decision tree learning bias}
-
-The decision tree is a non-linear classifier that generates a set of hyperplanes that
-are orthogonal to the axes.  Consider the decision tree in \cref{fig:tree-and}.
-
-\begin{figurebox}[label=fig:tree-and]{Decision tree representation.}
-  \centering
-  \begin{tikzpicture}
-    \node[decision] (x1) at (0, 0) {$x_1$};
-    \node[block] (n1) at (-2, -1.5) {$\hat{y} = 0$};
-    \node[decision] (x2) at (2, -1.5) {$x_2$};
-    \node[block] (n2) at (0, -3) {$\hat{y} = 0$};
-    \node[block] (p) at (4, -3) {$\hat{y} = 1$};
-
-    \draw (x1) -| (n1) node [midway, above] {$\leq 0.5$};
-    \draw (x1) -| (x2) node [midway, above] {$>0.5$};
-    \draw (x2) -| (n2) node [midway, above] {$\leq 0.5$};
-    \draw (x2) -| (p) node [midway, above] {$>0.5$};
-  \end{tikzpicture}
-  \tcblower
-  The decision tree that separates the AND dataset.
-\end{figurebox}
-
-\begin{figurebox}[label=fig:tree-bias]{Decision tree learning bias.}
-  \centering
-  \begin{tikzpicture}
-    \begin{axis}[
-        axis x line=bottom,
-        axis y line=left,
-        xlabel={$x_1$},
-        ylabel={$x_2$},
-        width=0.6\textwidth,
-        height=0.6\textwidth,
-        xtick={0, 1},
-        ytick={0, 1},
-        grid=both,
-        xmin=-0.5, xmax=1.5,
-        ymin=-0.5, ymax=1.5,
-      ]
-      \addplot+[only marks, mark=+, mark size=3pt] coordinates {
-        (1, 1)
-      };
-      \addplot+[only marks, mark=*, mark size=3pt] coordinates {
-        (0, 0) (0, 1) (1, 0)
-      };
-      \addplot+[domain=0.5:1.5, mark=none, black, thick] {0.5};
-      \addplot+[mark=none, black, thick] coordinates {(0.5, -0.5) (0.5, 1.5)};
-    \end{axis}
-  \end{tikzpicture}
-  \tcblower
-  The decision tree learning bias is the assumption that the classes can be separated with
-  hyperplanes orthogonal to the axes.
-\end{figurebox}
-
-\begin{hlbox}{Think about\dots}
-  Decision tree are nonparametric models, one can easily increase the depth of the tree to
-  fit the data.
-\end{hlbox}
-
-\subsection{$k$-nearest neighbors learning bias}
-
-The $k$-nearest neighbors ($k$-NN) is a non-linear nonparametric classifier that
-generate arbitrarily complex decision boundaries by ``memoring'' the training data.
-The behavior of the boundaries depends on the value of $k$ and the distance metric one
-uses to find the nearest neighbors of a point.
-
-\begin{figurebox}[label=fig:1nn-bias]{1-NN learning bias.}
-  \centering
-  \begin{tikzpicture}
-    \begin{axis}[
-        axis x line=bottom,
-        axis y line=left,
-        xlabel={$x_1$},
-        ylabel={$x_2$},
-        width=0.6\textwidth,
-        height=0.6\textwidth,
-        xtick={0, 1},
-        ytick={0, 1},
-        grid=both,
-        xmin=-0.5, xmax=1.5,
-        ymin=-0.5, ymax=1.5,
-      ]
-      \addplot+[only marks, mark=+, mark size=3pt] coordinates {
-        (1, 1)
-      };
-      \addplot+[only marks, mark=*, mark size=3pt] coordinates {
-        (0, 0) (0, 1) (1, 0)
-      };
-      \addplot+[domain=0.5:1.5, mark=none, black, thick] {0.5};
-      \addplot+[mark=none, black, thick] coordinates {(0.5, 0.5) (0.5, 1.5)};
-    \end{axis}
-  \end{tikzpicture}
-  \tcblower
-  In this particular case, the 1-NN boundaries match the decision tree boundaries.
-\end{figurebox}
-
-As $k$ increases the boundaries become smoother:
-\href{https://images.squarespace-cdn.com/content/v1/5d782753c70af105c29a9b14/1580261947016-XODPUVKWPGGMJJMAXSNF/Screen+Shot+2020-01-28+at+8.38.55+PM.png}{example}.
-
-See illustration: \href{https://scikit-learn.org/stable/auto_examples/classification/plot_classifier_comparison.html}{here}.
 
 % vim: spell spelllang=en
