--- a/main.tex
+++ b/main.tex
@@ -35,7 +35,7 @@
 \DeclareMathOperator*{\argmin}{arg\,min}
 \DeclareMathOperator{\Prob}{P}
 \DeclareMathOperator{\E}{E}
-\DeclareMathOperator{\Var}{V}
+\DeclareMathOperator{\Var}{Var}
 \DeclareMathOperator{\sign}{sign}
 
 \usepackage[Bjornstrup]{fncychap} % must come before cleveref to avoid break appendix name
@@ -360,6 +360,7 @@ visit
 \renewcommand{\theHchapter}{A\arabic{chapter}} % workaround for hyperref
 \appendix
 \input{preliminaries}
+\input{machines}
 
 \backmatter
 \printbibliography
