--- a/references.bib
+++ b/references.bib
@@ -550,3 +550,11 @@ pages = {107–113},
   pages={781--787},
   year={1968}
 }
+
+@book{Goodfellow2016,
+    title={Deep Learning},
+    author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},
+    publisher={MIT Press},
+    note={\url{http://www.deeplearningbook.org}},
+    year={2016}
+}
