--- a/about.tex
+++ b/about.tex
@@ -3,11 +3,12 @@
 \noindent Dear reader, \vspace{1em}
 
 This book has started from the lectures notes of the course PO-235 Data Science Project
-that I teach for graduate students at the Aeronautics Institute of Technology (ITA) in
-Brazil.  I have been teaching this course since 2023, and I have been improving the
+that I teach for graduate students at the Aeronautics Institute of Technology (ITA) and at
+the Federal University of São Paulo (UNIFESP) in Brazil.  I have been teaching this
+subject since 2021, and I have been improving the
 material every year.
 
-Before that, I was the coordinator of the Data Science Specialization Program (CEDS) at
+Moreover, I was the coordinator of the Data Science Specialization Program (CEDS) at
 ITA.  That experience, which included lots of administrative work, but also teaching and
 supervising professionals in the course, has helped me to understand the needs of the
 market and the students.
