--- a/handling.tex
+++ b/handling.tex
@@ -1143,7 +1143,7 @@ will create a new column \code{y} with the cumulative sum of the \code{x} column
     \node (source) [darkcircle] at (0, -2) {Source};
     \node (group) [mediumblock] at (0, 0) {Group};
     \node (mutate) [mediumblock] at (2, 0) {Mutate};
-    \node (ungroup) [mediumblock] at (4, 0) {Ungroup};
+    \node (ungroup) [mediumblock, text width=3.5em] at (4, 0) {Ungroup};
     \node (select) [mediumblock] at (6, 0) {Select};
     \node (temp) [darkcircle] at (6, -2) {};
     \node (join) [mediumblock] at (3, -2) {Join};
